test/invalid-syntax/git/no-name.djs
classy Foo
    git
    wow
wow
